<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTrabCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelNombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTrabNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelApellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTrabApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelTelefono">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTrabTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelEdad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTrabEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>




            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/trabajadores" />

            <Button
                android:id="@+id/btnSeleccionarImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AGREGAR IMAGEN" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/btnTrabActualizar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ACTUALIZAR"
                        app:cornerRadius="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/btnTrabEliminar"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="ELIMINAR"
                        app:cornerRadius="5dp"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnTrabSalir"
                android:layout_width="384dp"
                android:layout_height="59dp"
                android:text="SALIR" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>