<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="7dp"
            android:hint="@string/labelNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTrabNombreNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="7dp"
            android:hint="@string/labelApellido">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTrabApellidoNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField3"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="7dp"
            android:hint="@string/labelTelefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTrabTelefonoNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="7dp"

            android:hint="[Selecciona Servicio]">

            <AutoCompleteTextView
                android:id="@+id/atvServicio"
                android:layout_width="312dp"
                android:layout_height="wrap_content"

                android:inputType="none"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField4"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:hint="@string/labelEdad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTrabEdadNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>





        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/trabajadores" />

        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="AGREGAR IMAGEN" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/btnTrabGrabar"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:text="GRABAR"
                    app:cornerRadius="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/btnTrabSalirNew"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="SALIR"
                    app:cornerRadius="5dp"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>